--- a/app/app.css
+++ b/app/app.css
@@ -22,22 +22,22 @@ hr.progressbarDone{
 .donation-widget {
     max-width: 50em;
     max-height: 100%;
+}
 
-    .product-headline {
-       max-width: 100%;
-       max-height: 100%;
-       font-style: italic;
-       color: grey;
-       text-align: center;
-       margin: 1em 0 2.5em 0;
-    }
+.donation-widget .md-button.md-default-theme.md-primary, .md-button.md-primary {
+    margin-bottom: 2em;
+}
 
-    .remaining-days-left span {
-      color:rgb(63, 81, 181);
-      font-weight: bold;
-    }
+.donation-widget .product-headline {
+   max-width: 100%;
+   max-height: 100%;
+   font-style: italic;
+   color: grey;
+   text-align: center;
+   margin: 1em 0 2.5em 0;
+}
 
-    .md-button.md-default-theme.md-primary, .md-button.md-primary {
-        margin-bottom: 2em;
-    }
+.donation-widget .remaining-days-left span {
+  color:rgb(63, 81, 181);
+  font-weight: bold;
 }
